[gd_scene load_steps=12 format=3 uid="uid://b5rcnhsusg0lb"]

[ext_resource type="PackedScene" uid="uid://bixav0r3he737" path="res://Card Actions/Base/card_action.tscn" id="1_07jkt"]
[ext_resource type="Script" uid="uid://c36e8w22dguek" path="res://Card Actions/Arcanist/heal_prep_card_action.gd" id="2_cti3k"]
[ext_resource type="Texture2D" uid="uid://k2orvye6ycoh" path="res://Assets/Cards/Arcanist/heal_incoming_card_action1.png" id="3_1ygvd"]
[ext_resource type="Texture2D" uid="uid://drsdhgvupbev3" path="res://Assets/Cards/Arcanist/heal_incoming_card_action2.png" id="4_37n1e"]
[ext_resource type="PackedScene" uid="uid://dnwb2tosqt7sb" path="res://Modules/hit_box.tscn" id="4_qaqao"]
[ext_resource type="Texture2D" uid="uid://ccjaymwbvnos7" path="res://Assets/Cards/Arcanist/heal_outgoing_card_action.png" id="13_oejmw"]

[sub_resource type="Animation" id="Animation_wtaau"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IncomingAttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OutgoingAttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OutgoingAttackSprite/HitBox:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OutgoingAttackSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OutgoingAttackSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IncomingAttackSprite:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_1ygvd")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("IncomingAttackSprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_cti3k"]
resource_name = "come"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OutgoingAttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OutgoingAttackSprite/HitBox:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IncomingAttackSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"discard_card"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IncomingAttackSprite:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_1ygvd"), ExtResource("4_37n1e"), ExtResource("3_1ygvd"), ExtResource("4_37n1e"), ExtResource("3_1ygvd")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("IncomingAttackSprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0871255, 0.273966, 0.5),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(1, 1), Vector2(1, 1), Vector2(0.25, 0.25)]
}

[sub_resource type="Animation" id="Animation_3ve32"]
resource_name = "go"
length = 1.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"discard_card"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OutgoingAttackSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OutgoingAttackSprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OutgoingAttackSprite/HitBox:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("OutgoingAttackSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cti3k"]
_data = {
&"RESET": SubResource("Animation_wtaau"),
&"come": SubResource("Animation_cti3k"),
&"go": SubResource("Animation_3ve32")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovqno"]
size = Vector2(127.279, 126.917)

[node name="HealPrepCardAction" instance=ExtResource("1_07jkt")]
script = ExtResource("2_cti3k")

[node name="AnimationPlayer" parent="." index="0"]
libraries = {
&"": SubResource("AnimationLibrary_cti3k")
}

[node name="Placeholder" parent="." index="1"]
visible = true

[node name="IncomingAttackSprite" type="Sprite2D" parent="." index="2"]
visible = false
position = Vector2(200, 0)
texture = ExtResource("3_1ygvd")

[node name="OutgoingAttackSprite" type="Sprite2D" parent="." index="3"]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("13_oejmw")

[node name="HitBox" parent="OutgoingAttackSprite" index="0" instance=ExtResource("4_qaqao")]
unique_name_in_owner = true
visible = false
hitbox_type = "Player"
enabled = true

[node name="EnemyDetector" type="Area2D" parent="OutgoingAttackSprite" index="1"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutgoingAttackSprite/EnemyDetector" index="0"]
visible = false
position = Vector2(0.00717163, 0.222336)
shape = SubResource("RectangleShape2D_ovqno")

[connection signal="area_entered" from="OutgoingAttackSprite/EnemyDetector" to="." method="_on_enemy_detector_area_entered"]
[connection signal="body_entered" from="OutgoingAttackSprite/EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
